Fixes iOS status bar overlap

--- a/rogue-thi-app/styles/globals.css
+++ b/rogue-thi-app/styles/globals.css
@@ -26,7 +26,9 @@ body {
 /* prevent modals from being bigger than the screen */
 .modal-content {
   max-height: calc(90vh - env(safe-area-inset-top, 0px) - env(safe-area-inset-bottom, 0px));
+  margin-top: env(safe-area-inset-top, 0px);
 }
+
 .modal-body {
   flex: unset;
   overflow-y: scroll;
